discussion/kv_engine/181154/181154_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: Initialise engine in RangeScanTimeoutTask

The current constructor path does not initialise the engine pointer
which is required in the run loop

Change-Id: Id125be5b98692ff731ad6ac770872d2b19980a4b

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-10-11 15:24:33.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-10-11 15:33:08.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50221/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50221/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42148/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42148/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24307/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24307/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23466/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23466/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31486/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31486/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10788/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10788/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23070/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23070/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21058/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_owner.cc:124:19: error: use of undeclared identifier "e" [clang-diagnostic-error]
        engine = &e;
                  ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21058/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_owner.cc:124:19:
error: use of undeclared identifier "e" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21058/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22483/ : FAILURE

Compile error at [2022-10-11T15:29:04.741Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master_2/kv_engine/engines/ep/src/range_scans/range_scan_owner.cc:124:19:
error: use of undeclared identifier "e"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22483/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10885/ : FAILURE

Compile error at [2022-10-11T15:29:44.215Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/range_scans/range_scan_owner.cc:124:19:
error: ?e? was not declared in this scope
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10885/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/20298/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
